[package]
name = "mysql"
version = "0.0.0"
workspace = "../.."

[dependencies]
shio = { path = "../../lib" }
mysql_async = "^0.12.1"
error-chain = "^0.11.0-rc.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.5", features = ["serde"] }
pretty_env_logger = "0.1"
http = "0.1.1"